manifests/injector-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-injector
  namespace: injector
spec:
  selector:
    matchLabels:
      app: pod-injector
  replicas: 1
  template:
    metadata:
      labels:
        app: pod-injector
    spec:
      restartPolicy: Always
      containers:
      - name: pod-injector
        image: jianshao/pod-injector:0.1.1
        ports:
        - containerPort: 8443
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 100Mi
        args:
          - pod-injector
          - -v=2
        volumeMounts:
          - mountPath: /certs
            name: injector-certs
          - mountPath: /config
            name: injection-config
      volumes:
      - name: injector-certs
        secret:
          secretName: injector-certs
      - name: injection-config
        configMap:
          name: injection-config

---
apiVersion: v1
kind: Service
metadata:
  name: pod-injector
  labels:
    app: pod-injector
  namespace: injector
spec:
  ports:
  - name: http
    port: 8443
  selector:
    app: pod-injector
