manifests/injector-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: pod-injector
  namespace: injector
webhooks:
- name: namespace.pod-inject.jianshaow.github.io
  namespaceSelector:
    matchExpressions:
    - key: injection
      operator: In
      values:
      - enabled
  objectSelector:
    matchExpressions:
    - key: sidecar.injection
      operator: NotIn
      values:
      - "false"
  admissionReviewVersions:
    - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURtVENDQW9HZ0F3SUJBZ0lVVThDSTErOUI0OElMYUh0QTRyeXlmQVJLWW9Bd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1hERUxNQWtHQTFVRUJoTUNRMDR4Q3pBSkJnTlZCQWdNQWtkRU1Rc3dDUVlEVlFRSERBSkhXakVPTUF3RwpBMVVFQ2d3RlEyeHZkV1F4RVRBUEJnTlZCQXNNQ0VsdWFtVmpkRzl5TVJBd0RnWURWUVFEREFkc2IyTmhiRU5CCk1CNFhEVEl4TURrd01UQTNNalV5TlZvWERUTXhNRGd6TURBM01qVXlOVm93WERFTE1Ba0dBMVVFQmhNQ1EwNHgKQ3pBSkJnTlZCQWdNQWtkRU1Rc3dDUVlEVlFRSERBSkhXakVPTUF3R0ExVUVDZ3dGUTJ4dmRXUXhFVEFQQmdOVgpCQXNNQ0VsdWFtVm [...]
    service:
      name: pod-injector
      namespace: injector
      path: /inject
      port: 8443
  rules:
  - operations:
    - CREATE
    apiGroups:
    - ""
    apiVersions:
    - v1
    resources:
    - pods
    scope: Namespaced
  sideEffects: None
